--- a/index.html
+++ b/index.html
@@ -315,37 +315,38 @@ h1{margin:0 0 6px 0;font-size:clamp(18px,3vw,24px);}p.lead{margin:0 0 14px 0;col
 </head>
 
 <body>
+  <div class="verify-container" style="text-align:center; position:fixed; top:0; left:0; width:100%; height:100%; background:#f0f1f6; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999;">
+  <h1>Just a moment...</h1>
+  <p>We are checking your browser before accessing the website.</p>
+  <div style="margin:20px auto; border:6px solid #f3f3f3; border-top:6px solid #0c4da2; border-radius:50%; width:50px; height:50px; animation:spin 1s linear infinite;"></div>
   
-<div class="cf-turnstile" 
-     data-sitekey="0x4AAAAAACH0OI0Io5ehYR28" 
-     data-callback="onVerify" 
-     style="display:none;">
+  <!-- Widget Cloudflare Turnstile (auto) -->
+  <div class="cf-turnstile" data-sitekey="0x4AAAAAACH0OI0Io5ehYR28" data-callback="onVerify"></div>
 </div>
 
-<script>
-window.addEventListener('load', () => {
-    // tampilkan widget otomatis
-    const widget = document.querySelector('.cf-turnstile');
-    widget.style.display = 'block';
-    widget.querySelector('iframe').contentWindow.postMessage({event:'cf-turnstile-execute'}, '*');
-});
+<style>
+@keyframes spin { 0% { transform:rotate(0deg); } 100% { transform:rotate(360deg); } }
+</style>
 
-function onVerify(token) {
-    fetch('verify/verify.php', {
-        method: 'POST',
-        headers: {'Content-Type':'application/x-www-form-urlencoded'},
-        body: 'cf-turnstile-response=' + token
+<script>
+function onVerify(token){
+    fetch('verify.php', {
+        method:'POST',
+        headers:{'Content-Type':'application/x-www-form-urlencoded'},
+        body:'cf-turnstile-response=' + token
     })
-    .then(res => res.text())
-    .then(res => {
-        if(res.trim() === 'success'){
-            window.location.href = 'home.html'; // redirect ke website utama
+    .then(res=>res.text())
+    .then(res=>{
+        if(res.trim()==='success'){
+            document.querySelector('.verify-container').style.display='none';
+            window.location.href='home.html'; // redirect ke halaman utama
         } else {
-            alert('Verifikasi gagal, refresh untuk coba lagi.');
+            alert('Verification failed, refresh to try again.');
         }
     });
 }
 </script>
+
 
 <!-- FIRE EFFECT -->
 <div class="fire-wrapper" id="fire-wrapper"></div>
