--- a/index.html
+++ b/index.html
@@ -315,18 +315,11 @@ h1{margin:0 0 6px 0;font-size:clamp(18px,3vw,24px);}p.lead{margin:0 0 14px 0;col
 </head>
 
 <body>
-  <div class="verify-container" style="text-align:center; position:fixed; top:0; left:0; width:100%; height:100%; background:#f0f1f6; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999;">
-  <h1>Just a moment...</h1>
-  <p>We are checking your browser before accessing the website.</p>
-  <div style="margin:20px auto; border:6px solid #f3f3f3; border-top:6px solid #0c4da2; border-radius:50%; width:50px; height:50px; animation:spin 1s linear infinite;"></div>
-  
-  <!-- Widget Cloudflare Turnstile (auto) -->
-  <div class="cf-turnstile" data-sitekey="0x4AAAAAACH0OI0Io5ehYR28" data-callback="onVerify"></div>
+ <div class="cf-turnstile" 
+     data-sitekey="0x4AAAAAACH0OI0Io5ehYR28" 
+     data-callback="onVerify" 
+     style="position:fixed; top:20px; right:20px; z-index:9999;">
 </div>
-
-<style>
-@keyframes spin { 0% { transform:rotate(0deg); } 100% { transform:rotate(360deg); } }
-</style>
 
 <script>
 function onVerify(token){
@@ -335,11 +328,11 @@ function onVerify(token){
         headers:{'Content-Type':'application/x-www-form-urlencoded'},
         body:'cf-turnstile-response=' + token
     })
-    .then(res=>res.text())
-    .then(res=>{
-        if(res.trim()==='success'){
-            document.querySelector('.verify-container').style.display='none';
-            window.location.href='home.html'; // redirect ke halaman utama
+    .then(res => res.text())
+    .then(res => {
+        if(res.trim() === 'success'){
+            console.log('Verifikasi berhasil!'); 
+            // user sudah bisa lanjut mengakses website
         } else {
             alert('Verification failed, refresh to try again.');
         }
