--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Growfax — Downloads</title>
 
-<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-
-
 <!-- Security-related meta -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net https://upload.wikimedia.org; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; connect-src 'self' https://api.emailjs.com; img-src 'self' data: https://upload.wikimedia.org; style-src 'self' 'unsafe-inline'; frame-src https://www.paypal.com;">
 <meta name="referrer" content="no-referrer-when-downgrade">
@@ -317,31 +314,42 @@ h1{margin:0 0 6px 0;font-size:clamp(18px,3vw,24px);}p.lead{margin:0 0 14px 0;col
 
 <body>
 
-<!-- Widget Turnstile -->
-<div class="cf-turnstile" 
-     data-sitekey="0x4AAAAAACH0oKFAimLRmtLt" 
-     data-callback="onVerify"
-     style="position:fixed; top:20px; right:20px; z-index:9999;">
+<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+
+<div id="cloudflare-gate" style="position:fixed; top:0; left:0; width:100%; height:100%; background:white; z-index:9999; display:flex; justify-content:center; align-items:center;">
+    <div style="text-align:center;">
+        <img src="https://www.cloudflare.com/img/logo-cloudflare-dark.svg" width="120">
+        <h2>Verifikasi Keamanan</h2>
+        <p>Silakan centang di bawah untuk masuk ke website.</p>
+        
+        <div class="cf-turnstile" 
+             data-sitekey="0x4AAAAAACH0oKFAimLRmtLt" 
+             data-callback="verifyHuman"></div>
+    </div>
 </div>
 
 <script>
-function onVerify(token){
+// Fungsi ini jalan otomatis pas user klik centang
+function verifyHuman(token) {
+    // Di sini kita kirim token ke verify.php pake cara "diam-diam" (AJAX)
     fetch('verify.php', {
-        method:'POST',
-        headers:{'Content-Type':'application/x-www-form-urlencoded'},
-        body:'cf-turnstile-response=' + token
+        method: 'POST',
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+        body: 'cf-turnstile-response=' + token
     })
-    .then(res => res.text())
-    .then(res => {
-        if(res.trim() === 'success'){
-            console.log('Verifikasi berhasil!'); 
-            // user sekarang bisa akses website
+    .then(response => response.text())
+    .then(data => {
+        if(data.includes("Berhasil")) {
+            // Kalau sukses, tutup lapisan pencegatnya
+            document.getElementById('cloudflare-gate').style.display = 'none';
+            alert("Verifikasi Sukses! Selamat Datang.");
         } else {
-            alert('Verification gagal, refresh untuk coba lagi.');
+            alert("Verifikasi Gagal, coba lagi.");
         }
     });
 }
 </script>
+
 
 
 <!-- FIRE EFFECT -->
